validator_derive_tests/tests/compile-fail/unnamed_fields.stderr
error: struct has unnamed fields

         = help: #[derive(Validate)] can only be used on structs with named fields

 --> tests/compile-fail/unnamed_fields.rs:4:19
  |
4 | struct TupleStruct(String);
  |                   ^^^^^^^^
